MDEV-30529: Assertion `rnd_records <= s->found_records' failed in best_access_path

best_access_path() has an assertion:

   DBUG_ASSERT(rnd_records <= s->found_records);

make it rounding-safe.